# PodcastBot

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  DOCKERFILE  Dockerfile  LICENSE  Podcast_bot.py  Podcast_bot_message.py  README-RU.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt  ruff.toml  separation_audio.py
.github/workflows/: push-docker-container.yml
audio-lib/: Cargo.toml  pyproject.toml
audio-lib/src/: async_lib.rs  async_mod.rs  lib.rs  models.rs  sync_lib.rs  sync_mod.rs
audio_lib/: Cargo.toml  __init__.py  pyproject.toml  schemas.py  yt.py
audio_lib/src/: async_lib.rs  lib.rs  sync_lib.rs
bot/: config.py  main.py  messages.py  storage.py
bot/db/: __init__.py  database.py  models.py
bot/handlers/: __init__.py  start_dialogue.py  support.py
bot/handlers/errors/: router.py
bot/handlers/start_dialogue/: __init__.py  keyboard.py  messages.py  router.py
bot/handlers/support/: router.py
bot/handlers/url/: errors.py  messages.py  models.py  router.py  utils.py
bot/keyboards/: __init__.py  mein_menu.py  start.py  start_message.py
bot/middlewares/: __init__.py  i18n.py
bot/utils/: __init__.py  anecdotes.py  i18n.py  menu.py  url.py
locales/: stub.pyi
locales/en/: txt.ftl
locales/en/LC_MESSAGES/: txt.ftl
locales/ru/: txt.ftl
locales/ru/LC_MESSAGES/: txt.ftl
podcast_bot/: Podcast_bot.py  additional_functions.py  config.py  messages.py
test/: lib_test.py  url_test.py
