[project]
name = "podcast-bot"
version = "1.2.0"
description = "A Telegram bot that helps users easily download audio from YouTube videos"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "aiobotocore>=2.21.1",
    "aiogram>=3.18.0",
    "beanie>=1.29.0",
    "pydantic-settings>=2.8.1",
    "maturin>=1.8.2",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "ruff>=0.9.2",
    "types-aiobotocore[essential]>=2.21.1",
    # mypy
]
