[project]
name = "podcast-bot"
version = "1.2.0"
description = "A Telegram bot that helps users easily download audio from YouTube videos"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.18.0",
    "aiobotocore>=2.21.1",
    "beanie>=1.29.0",
    "pydantic-settings>=2.8.1",
    "maturin>=1.8.2",
    "yt-dlp>=2025.2.19",
    "fluentogram>=1.1.10",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.26.0",
    "ruff>=0.11.5",
    "types-aiobotocore[essential]>=2.21.1",
    # mypy
]

[tool.ruff]
line-length = 130

[tool.ruff.lint]
select = [
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "F", # pyflakes
    "I", # isort
    "B", # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
    "ARG001", # unused arguments in functions
]

ignore = [
    "E501", # line too long, handled by black
    "B008", # do not perform function calls in argument defaults
    "W191", # indentation contains tabs
    "B904", # Allow raising exceptions without from e, for HTTPException
]