[project]
name = "podcast-bot"
version = "1.2.0"
description = "A Telegram bot that helps users easily download audio from YouTube videos"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.22.0",
    "aiobotocore>=2.25.2",
    "beanie>=2.0.0",
    "pydantic-settings>=2.12.0",
    "yt-dlp>=2025.11.11.5312.dev0",
    "fluentogram>=1.2.1",
]

[dependency-groups]
dev = [
    "ruff>=0.14.4",
    "types-aiobotocore[essential]>=2.25.1",
]

[tool.ruff]
line-length = 130

[tool.ruff.lint]
select = [
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "F", # pyflakes
    "I", # isort
    "B", # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
    "ARG001", # unused arguments in functions
]

ignore = [
    "E501", # line too long, handled by black
    "B008", # do not perform function calls in argument defaults
    "W191", # indentation contains tabs
    "B904", # Allow raising exceptions without from e, for HTTPException
]