[package]
name = "audio-lib"
version = "0.1.0"
edition = "2021"

[lib]
name = "audio_lib"
crate-type = ["cdylib"]

[dependencies]
pyo3 = {version="0.20.3", features = ["extension-module"]}
pyo3-asyncio = { version = "0.20.0", features = ["attributes", "tokio-runtime"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0.118"
